FIX: map-wrap food-wrap CSS 처리

--- a/src/main/webapp/resources/css/foodList.css
+++ b/src/main/webapp/resources/css/foodList.css
@@ -250,7 +250,6 @@
 /* 지도 css */
 .map-wrap.food-wrap {
   width: 50%;
-  height:530px;
 }
 
 @media screen and (max-width: 992px) {
